--- a/meson.build
+++ b/meson.build
@@ -1,4 +1,4 @@
-project('nautilus-hide',
+project('nautilus-admin',
           version: '1.1.19',
     meson_version: '>= 0.59.0',
   default_options: [ 'warning_level=2',
@@ -27,6 +27,7 @@ dependency('pygobject-3.0', version: '>= 3.42.0')
 
 conf = configuration_data()
 conf.set('NAUTILUS_PATH', '/usr/bin/nautilus')
+conf.set('EDITOR_PATH', '/usr/bin/gnome-text-editor')
 conf.set('LOCALE_DIR', join_paths(get_option('prefix'), get_option('localedir')))
 
 subdir('extension')
